Ashwin/Melanie | #3273 | Scrollbar issue in mac chrome.

--- a/datawinners/media/css/plugins/960gd/reset.css
+++ b/datawinners/media/css/plugins/960gd/reset.css
@@ -176,3 +176,15 @@ ul li{
 a{
     text-decoration:none;
 }
+
+/* To make scrollbar appear by default in mac chrome */
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
